[package]
name = "brolaunch"
version = "0.1.0"
edition = "2024"
description = "Launch Chromium with profile matching for URLs"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
fltk = "1.4"
dirs = "5.0"
