[package]
name = "brolaunch"
version = "0.2.0"
edition = "2024"
description = "Launch Chromium with profile matching for URLs"
license = "MIT"
authors = ["Micah <micah@example.com>"]
repository = "https://github.com/MicahStevens/brolaunch"
homepage = "https://github.com/MicahStevens/brolaunch"
readme = "README.md"
keywords = ["chromium", "browser", "launcher", "profile", "productivity"]
categories = ["command-line-utilities", "gui"]

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
